# ThING

./: .gitignore  Gauss.cpp  HF.cpp  Makefile.am  Makefile.in  MxElem.cpp  MxElemFiller.cpp  R.cpp  README  config.h.in  configure  configure.ac  input.cpp  main.cpp  makefile  start.stp
autom4te.cache/: output.0  requests  traces.0
basissets/: 3-21G.bs  6-311G.bs  Makefile.am  Makefile.in  STO-6G.bs  SV.bs  aug-cc-pVDZ.bs  aug-cc-pVQZ.bs  aug-cc-pVTZ.bs  cc-pVDZ.bs  cc-pVQZ.bs  cc-pVTZ.bs  elements.bs
doc/: Makefile.am  Makefile.in  doc-config  doc-config.in
examples/: Makefile.am  Makefile.in  exampleBH.stp  exampleCH4.stp  exampleH2O.stp  exampleH4.stp  exampleN2.stp  exampleNH3.stp
include/: Gauss.h  HF.h  MxElem.h  MxElemFiller.h  R.h  input.h
lib/: Diag.cpp  Diag.h  Gauss.cpp  Gauss.h  HF.cpp  HF.h  Makefile.am  Makefile.in  MxElem.cpp  MxElem.h  MxElemFiller.cpp  MxElemFiller.h  R.cpp  R.h  ThING.h  input.cpp  input.h  lapack.h  libThING.pc.in  preamble.h
tools/: Makefile.am  Makefile.in  main.cpp
